--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 *.class
+build
 
 # Package Files #
-*.jar
 *.war
 *.ear
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
