--- a/QueenBee/build.xml
+++ b/QueenBee/build.xml
@@ -31,6 +31,9 @@
 	<target name="compile">
 		<mkdir dir="${classes.dir}"/>
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="jars"/>
+		<copy todir="${classes.dir}">
+		    <fileset dir="${src.dir}" excludes="**/*.java" />
+		</copy>
 	</target>
 
 	<target name="deploy" depends="compile">
