--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-*.class
-build
+*.pyc
 
-# Package Files #
-*.war
-*.ear
 
 # OS generated files #
 ######################
@@ -15,3 +11,4 @@ build
 Icon?
 ehthumbs.db
 Thumbs.db
+*~
